# VSCode-Chat-Browser

./: LICENSE  README.md  pyproject.toml  workspace_chat_browser_Linux.sh  workspace_chat_browser_Win.bat  workspace_chat_browser_macOS.terminal
docs/: architecture.md  cli-reference.md  index.md
src/vscode_chat_browser/: __init__.py  cli.py  core.py  workspace_chat_browser.py
tests/: conftest.py  test_cli.py  test_core.py  test_workspace_chat_browser.py
tests/fixtures/: make_demo_storage.py
tests/fixtures/demo_storage/2d5f8a1b3c4e9053/: state.vscdb  workspace.json
tests/fixtures/demo_storage/2d5f8a1b3c4e9053/chatSessions/: 7a8b9c0d-1e2f-3a4b-5c6d-7e8f9a0b1c2d.jsonl  8b9c0d1e-2f3a-4b5c-6d7e-8f9a0b1c2d3e.jsonl  9c0d1e2f-3a4b-5c6d-7e8f-9a0b1c2d3e4f.jsonl
tests/fixtures/demo_storage/7c9e1d2a5f3b8042/: state.vscdb  workspace.json
tests/fixtures/demo_storage/7c9e1d2a5f3b8042/chatSessions/: 4d5e6f7a-8b9c-0d1e-2f3a-4b5c6d7e8f9a.jsonl  5e6f7a8b-9c0d-1e2f-3a4b-5c6d7e8f9a0b.jsonl  6f7a8b9c-0d1e-2f3a-4b5c-6d7e8f9a0b1c.jsonl
tests/fixtures/demo_storage/a3f8b2c1d4e5f601/: state.vscdb  workspace.json
tests/fixtures/demo_storage/a3f8b2c1d4e5f601/chatSessions/: 1a2b3c4d-5e6f-7a8b-9c0d-1e2f3a4b5c6d.jsonl  2b3c4d5e-6f7a-8b9c-0d1e-2f3a4b5c6d7e.jsonl  3c4d5e6f-7a8b-9c0d-1e2f-3a4b5c6d7e8f.jsonl
tests/fixtures/demo_storage/e5d4c3b2a1f09085/: state.vscdb  workspace.json
tests/fixtures/demo_storage/f1e2d3c4b5a69074/: state.vscdb  workspace.json
tests/fixtures/sessions/: aaaa-0001.jsonl  bbbb-0002.jsonl  cccc-0003.json
(+4 files in other folders)
